# yame

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  mutants.toml
.cargo/: mutants.toml
.chainlink/: issues.db  session.json
.claude/: settings.json
.claude/hooks/: session-start.py
.github/workflows/: ci.yml  mutants.yml
_docs/: CRATE.md  DESIGN.md  FEEDBACK-1.md  FEEDBACK-2.md  INITIAL FEEDBACK.md  MUTANT FEEDBACK.md  MUTANT NAUGHTY LIST.md  MUTANT REPEAT OFFENDERS.md  PLAN.md  ROADMAP.md  SHELL INTENTIONS.md
heartbeats/: claude-sonnet.json
src/: app.rs  clipboard.rs  commands.rs  config.rs  decoration.rs  highlighting.rs  input.rs  layout.rs  lib.rs  main.rs  renderer.rs  status.rs
src/decoration/: mod.rs  spans.rs  words.rs
src/renderer/: mod.rs  status.rs  utils.rs
tests/: integration.rs
tests/fixtures/: custom_theme.toml  sample.md
