[package]
name = "yame"
version = "0.1.0"
edition = "2024"
description = "A lightweight terminal Markdown editor"
license = "MIT"
authors = ["Cyrus <cyrus.eosphoros@gmail.com>"]
repository = "https://github.com/cyrusae/yame"
homepage = "https://github.com/cyrusae/yame"
readme = "README.md"
keywords = ["markdown", "editor", "terminal", "tui"]
categories = ["command-line-utilities", "text-editors"]
exclude = [".chainlink", ".claude", ".github", "_docs", ".antigravitycli", ".mcp.json", "mutants.out"]

[dependencies]
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["crossterm"] }
crossterm = "0.28"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arboard = "3"
# Provides the #[mutants::skip] attribute — a no-op proc macro at compile time.
# Must be in [dependencies] (not dev-dependencies) because the attributes appear
# on non-test functions, which aren't visible to the compiler via dev-dep paths.
mutants = "0.0.3"
unicode-width = "0.1"

[profile.release]
strip = true
opt-level = 3
